--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "laravel/ui": "^4.5",
+        "spatie/laravel-medialibrary": "10.*.*"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.0",
@@ -60,6 +62,9 @@
         "allow-plugins": {
             "pestphp/pest-plugin": true,
             "php-http/discovery": true
+        },
+        "platform": {
+            "php": "8.1.9"
         }
     },
     "minimum-stability": "stable",
